[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
dashmap = "6.1.0"
log = "0.4.27"
thiserror = "1.0.32"                                # error handling
tklog = "0.2.9"
tokio = { version = "1.23.0", features = ["full"] } # async networking
