[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
byte = "0.2.7"
byteorder = "1.5.0"
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.5.41", features = ["derive"] }
crc64fast = "1.1.0"
dashmap = "6.1.0"
log = "0.4.27"
resp-protocol = {git="https://github.com/tmacychen/rust-resp-protocol.git",branch="main"}
thiserror = "1.0.32"                                # error handling
tklog = "0.2.9"
tokio = { version = "1.23.0", features = ["full"] } # async networking
